# sinc

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: release.yml
src/: config.rs  dotfile.rs  main.rs  path.rs  ui.rs
src/config/: dotfile.rs
