[package]
name = "sinc"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["futsuuu <futsuuu123@gmail.com>"]
repository = "https://github.com/futsuuu/sinc"
readme = "README.md"
description = "A cross-platform dotfiles manager written in Rust."
keywords = ["dotfiles", "manager", "toml", "config", "setting"]
categories = ["config", "command-line-utilities"]

[dependencies]
crossterm = "0.26.0"
dirs = "4.0.0"
fs_extra = "1.3.0"
os_info = "3"
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.7.1", features = ["preserve_order"] }
